Fix features page on small screens

--- a/frontend/sass/_banner.scss
+++ b/frontend/sass/_banner.scss
@@ -25,7 +25,7 @@
     margin-top: 1px;
     width: initial;
 
-    @media screen and (min-width: 481px) {
+    @media screen and (min-width: $lesser-mobile-size) {
       margin-right: 0.7rem;
       width: initial;
     }
